--- a/examples/apps/tic-tac-toe/flix.toml
+++ b/examples/apps/tic-tac-toe/flix.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "tic-tac-toe"
-description = "test"
+description = "A command line Tic Tac Toe game implemented in Flix."
 version     = "0.1.0"
-flix        = "0.59.0"
+flix        = "0.60.0"
 authors     = ["Gagan Chandan <gagan@gaganchandan.com>"]
