chore: add scope-graphs to community build

--- a/.github/workflows/community-build.yaml
+++ b/.github/workflows/community-build.yaml
@@ -47,6 +47,7 @@ jobs:
           - "jaschdoc/flix-parsers"
           - "mlutze/flix-json"
           - "mlutze/flixball"
+          - "rywiese/scope-graphs"
           - "stephentetley/charset-locale"
           - "stephentetley/flix-either"
           - "stephentetley/flix-htmldoc"
