--- a/.github/workflows/compiler-build-and-test.yaml
+++ b/.github/workflows/compiler-build-and-test.yaml
@@ -1,14 +1,14 @@
-name: Compiler Fuzzing
+name: Compiler
 
 on: [ pull_request, merge_group ]
 
 # Cancel previous runs if the PR is updated
 concurrency:
   cancel-in-progress: true
-  group: fuzzing-${{ github.ref }}
+  group: build-${{ github.ref }}
 
 jobs:
-  build-and-fuzz:
+  build-and-test:
     runs-on: ubuntu-latest
     env:
       GRADLE_OPTS: "-Xms128m -Xmx4g"
@@ -23,6 +23,6 @@ jobs:
           java-version: '21'
       - name: Build with gradle
         run: ./gradlew clean compileTestScala --console=plain
-      - name: Fuzz with timeout
+      - name: Run tests with timeout
         timeout-minutes: 20
-        run: ./gradlew testFuzzerSuite --console=plain
+        run: ./gradlew test --console=plain
