--- a/.github/workflows/fuzzing-completer.yml
+++ b/.github/workflows/fuzzing-completer.yml
@@ -1,4 +1,4 @@
-name: IDE Completion Tests
+name: Fuzz Autocomplete
 
 on: [ pull_request, merge_group ]
 
@@ -8,7 +8,7 @@ concurrency:
   group: ide-completion-tests-${{ github.ref }}
 
 jobs:
-  ide-completion-tests:
+  build-and-fuzz:
     runs-on: ubuntu-latest
     env:
       GRADLE_OPTS: "-Xms128m -Xmx4g"
@@ -21,8 +21,6 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: Build with gradle
-        run: ./gradlew clean compileTestScala --console=plain
       - name: Test with timeout
         timeout-minutes: 20
         run: ./gradlew testIDECompletion --console=plain
