--- a/.github/workflows/compiler-build-and-test.yaml
+++ b/.github/workflows/compiler-build-and-test.yaml
@@ -21,8 +21,9 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-          cache: gradle
-      - name: Build with gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+      - name: Build with Gradle
         run: ./gradlew compileTestScala --console=plain
       - name: Run tests with timeout
         timeout-minutes: 20
