ci: enable gradle cache (#11662)

--- a/.github/workflows/compiler-build-and-test.yaml
+++ b/.github/workflows/compiler-build-and-test.yaml
@@ -21,8 +21,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: Build with gradle
-        run: ./gradlew clean compileTestScala --console=plain
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+      - name: Build with Gradle
+        run: ./gradlew compileTestScala --console=plain
       - name: Run tests with timeout
         timeout-minutes: 20
         run: ./gradlew test --console=plain
