refactor: remove old Datalog engine

--- a/.github/workflows/community-build.yaml
+++ b/.github/workflows/community-build.yaml
@@ -40,6 +40,7 @@ jobs:
       max-parallel: 1
       matrix:
         repo:
+          - "flix/datalog2"
           - "JonathanStarup/ListSet"
           - "JonathanStarup/talpin1992-in-flix"
           - "mlutze/flix-json"
