chore: add build target

--- a/build.gradle
+++ b/build.gradle
@@ -130,3 +130,13 @@ task vscode(type: Copy, dependsOn: [clean, jar]) {
     from 'build/libs/flix.jar'
     into providers.gradleProperty('dev.flix.vscode.project')
 }
+
+tasks.register('testFlixPackageManager', JavaExec) {
+    dependsOn['testClasses']
+    dependsOn['testClasses']
+    mainClass = 'org.scalatest.tools.Runner'
+    args = ['-s', 'ca.uwaterloo.flix.tools.TestFlixPackageManager', '-o']
+    // We also enforce that all tests can complete with 4GB of memory:
+    classpath = sourceSets.test.runtimeClasspath
+    standardInput = System.in
+}
