--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     // Java implementation of LSP.
     implementation('org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0')
 
-    testImplementation('org.scalatest:scalatest_2.13:3.2.19')
+    testImplementation "org.scalatest:scalatest_2.13:3.2.19"
+    testRuntimeOnly "org.scala-lang.modules:scala-xml_2.13:2.1.0"
+    testRuntimeOnly "org.scalatestplus:junit-5-10_2.13:3.2.19.0"
 }
 
 tasks.withType(ScalaCompile).configureEach {
@@ -94,37 +96,33 @@ jar {
     duplicatesStrategy = 'exclude'
 }
 
-tasks.register('testAll', JavaExec) {
-    dependsOn['testClasses']
-    mainClass = 'org.scalatest.tools.Runner'
-    // Note: We do not use the -P (parallelism) flag for two reasons:
-    // (A) It may use excessive amounts of memory (running many instances of the compiler).
-    // (B) It may garble the order of the output (when an error occurs).
-    // Of course we still benefit from parallelism inside Flix itself.
-    args = ['-s', 'ca.uwaterloo.flix.TestAll', '-o']
-    // We also enforce that all tests can complete with 4GB of memory:
-    jvmArgs = ['-Xmx3g']
-    classpath = sourceSets.test.runtimeClasspath
-    standardInput = System.in
+test {
+    useJUnitPlatform {
+        includeEngines 'scalatest'
+    }
+    testLogging {
+        events("passed", "skipped", "failed", "standard_error")
+    }
+    maxParallelForks = 1
+    maxHeapSize = '3g'
 }
 
-task testFuzzerSuite(dependsOn: ['testClasses'], type: JavaExec) {
+tasks.register('testFuzzerSuite', JavaExec) {
     mainClass = 'org.scalatest.tools.Runner'
     args = ['-s', 'flix.fuzzers.FuzzerSuite', '-o']
     classpath = sourceSets.test.runtimeClasspath
     standardInput = System.in
 }
 
-task testIDECompletion(dependsOn: ['testClasses'], type: JavaExec) {
+tasks.register('testIDECompletion', JavaExec) {
     mainClass = 'org.scalatest.tools.Runner'
     args = ['-s', 'ca.uwaterloo.flix.api.lsp.TestCompletionProvider', '-o']
     classpath = sourceSets.test.runtimeClasspath
     standardInput = System.in
 }
 
-test.dependsOn testAll
-
-task vscode(type: Copy, dependsOn: [clean, jar]) {
+tasks.register('vscode', Copy) {
+    dependsOn(['build', 'jar'])
     from 'build/libs/flix.jar'
     into providers.gradleProperty('dev.flix.vscode.project')
 }
