--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     // Java implementation of LSP.
     implementation('org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0')
 
+    testImplementation "org.junit.platform:junit-platform-launcher:1.13.1"
     testImplementation "org.scalatest:scalatest_2.13:3.2.19"
     testRuntimeOnly "org.scala-lang.modules:scala-xml_2.13:2.1.0"
     testRuntimeOnly "org.scalatestplus:junit-5-10_2.13:3.2.19.0"
