--- a/.github/workflows/test-flix-package-manager.yaml
+++ b/.github/workflows/test-flix-package-manager.yaml
@@ -25,6 +25,6 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
         run: ./gradlew compileTestScala --console=plain
-      - name: Fuzz with timeout
+      - name: Run Flix Package Manager test suite with timeout
         timeout-minutes: 10
         run: ./gradlew testFlixPackageManager --console=plain
