--- a/build.gradle
+++ b/build.gradle
@@ -130,3 +130,11 @@ tasks.register('vscode', Copy) {
     from 'build/libs/flix.jar'
     into providers.gradleProperty('dev.flix.vscode.project')
 }
+
+tasks.register('testFlixPackageManager', JavaExec) {
+    dependsOn['testClasses']
+    mainClass = 'org.scalatest.tools.Runner'
+    args = ['-s', 'ca.uwaterloo.flix.tools.TestFlixPackageManager', '-o']
+    classpath = sourceSets.test.runtimeClasspath
+    standardInput = System.in
+}
