ci: add `magnus-madsen/bibblitz` (#11868)

--- a/.github/workflows/community-build.yaml
+++ b/.github/workflows/community-build.yaml
@@ -43,6 +43,7 @@ jobs:
           - "flix/datalog2"
           - "JonathanStarup/ListSet"
           - "JonathanStarup/talpin1992-in-flix"
+          - "magnus-madsen/bibblitz"
           - "mlutze/flix-json"
           - "mlutze/flixball"
           - "rywiese/scope-graphs"
