--- a/.github/workflows/package-manager.yaml
+++ b/.github/workflows/package-manager.yaml
@@ -25,6 +25,6 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
         run: ./gradlew compileTestScala --console=plain
-      - name: Run Flix Package Manager test suite with timeout
+      - name: Test Package Manager suite with timeout
         timeout-minutes: 10
-        run: ./gradlew testFlixPackageManager --console=plain
+        run: ./gradlew testPackageManager --console=plain
