--- a/build.gradle
+++ b/build.gradle
@@ -131,10 +131,10 @@ tasks.register('vscode', Copy) {
     into providers.gradleProperty('dev.flix.vscode.project')
 }
 
-tasks.register('testFlixPackageManager', JavaExec) {
+tasks.register('testPackageManager', JavaExec) {
     dependsOn['testClasses']
     mainClass = 'org.scalatest.tools.Runner'
-    args = ['-s', 'ca.uwaterloo.flix.tools.TestFlixPackageManager', '-o']
+    args = ['-s', 'ca.uwaterloo.flix.tools.pkg.PackageManagerSuite', '-o']
     classpath = sourceSets.test.runtimeClasspath
     standardInput = System.in
 }
