--- a/.github/workflows/package-manager.yaml
+++ b/.github/workflows/package-manager.yaml
@@ -11,7 +11,7 @@ concurrency:
   group: test-flix-package-manager-${{ github.ref }}
 
 jobs:
-  build-and-test:
+  build-and-test-pkg-man:
     runs-on: ubuntu-latest
     env:
       GRADLE_OPTS: "-Xms128m -Xmx4g"
